# 15team_paintary

./: .flake8  .gitignore  README.md  pyproject.toml  test.sh
config/: dev_settings.py  settings.py
templates/: base.html
