[tool.poetry]
name = "paintary"
version = "0.1.0"
description = ""
authors = ["Roadman-Lee <rdmshine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
django-stubs = "^1.9.0"
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
cryptography = "^36.0.1"
PyMySQL = "1.0.2"
types-PyMySQL = "1.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.9
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.isort]
profile = "black"
